# TheAgentcy

./: .env  .gitignore  Dockerfile  README.md  compose-dev.yaml  evaluate.py  pyproject.toml  requirements.txt  run.py  sandbox_test.py  start_project.py
Latex/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  master.tex  titlepage.tex
evaluate/: gpt3.5.json  gpt4_with_vision2.json  test1.json  test2.json
execution-environment-tests/: python-exec.py  test.py
experiments/autogen/: agentchat_two_users.ipynb
experiments/execution-environment-tests/: Dockerfile  python-exec.py
experiments/lasse/: docker_test.py  sandbox_test.py  vision_test.py
experiments/llm_conversation/: conversation.ipynb  memory.ipynb
experiments/prompting_test/: backend.py  main.html  script.js  styles.css
experiments/stuff/: Experiments.ipynb  Visualization.ipynb  conversation_copy.txt  langchain.ipynb  langchain_example.ipynb  langchain_stuff.ipynb  prompts.ipynb
sandbox/: dockergenerator.py  instantiate.py  logger.py
sandbox/backend/: 05448bbc-4fe0-43a2-b670-cb6584e5892e.py  4e761a17-43ca-41b2-8dd5-bc837a570135.py  Dockerfile  gpt_code_backend.py  index.py
sandbox/frontend/: index.html
sandbox/test/: index.py
src/: agents.py  gui.py  instantiate.py  logger.py  pipeline.py  prompts.json  utils.py
src/characters/: backend_dev.txt  backend_doc.txt  backend_test.txt  database_dev.txt  database_doc.txt  database_test.txt  frontend_dev.txt  frontend_doc.txt  frontend_test.txt  orchestrator.txt
src/depr_chars/: backend_test.txt  database_doc.txt  database_test.txt  frontend_doc.txt  orchestrator.txt
(+90 files in other folders)
