[tool.poetry]
name = "multi-agent-frontend-dev"
version = "0.1.0"
description = ""
authors = ["Lasse, David, Benedikt, Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
openai = "^1.3.5"
docker = "^6.1.3"
python-dotenv = "^1.0.0"
langchain = "^0.0.345"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
