[tool.poetry]
name = "multi-agent-dev"
version = "0.1.0"
description = ""
authors = ["David, Lasse, Benedikt, Eric"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
PySide6 = "^6.6.1"
openai = "^1.7.0"
langchain = "^0.1.0"
docker = "^7.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
